--- a/testurl.html
+++ b/testurl.html
@@ -3,6 +3,6 @@
   <title>Product 12345</title>
  </head>
  <body>
-  <a href="mccyvms://aws-uat.volunteer.gov.sg/">lalala</a>
+  <a href="mctestvms://testtest/">lalala</a>
  </body>
 </html>
